fix list apis